objects/ddt_dynamic_001__Dynamic_Table_Attribute_Configuration__c.object
<CustomObject>
    <description>This object is used to set the column level configuration for Dynamic Datatable.</description>
    <fields>
        <fullName>ddt_dynamic_001__DynamicTableObjectConfiguration__c</fullName>
        <label>DynamicTableObjectConfiguration</label>
        <referenceTo>ddt_dynamic_001__Dynamic_Table_Object_Configuration__c</referenceTo>
        <relationshipLabel>Dynamic Table Attribute Configurations</relationshipLabel>
        <relationshipName>DynamicTableFieldConfigurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Fields_API_Name__c</fullName>
        <label>Fields API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Formatting__c</fullName>
        <label>Formatting</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Look up</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Long Text Area</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Sorting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sorting</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic Table Attribute Configuration</label>
    <listViews>
        <fullName>ddt_dynamic_001__All</fullName>
        <columns>NAME</columns>
        <columns>ddt_dynamic_001__DynamicTableObjectConfiguration__c</columns>
        <columns>ddt_dynamic_001__Field_Name__c</columns>
        <columns>ddt_dynamic_001__Sorting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DTFC-{0000}</displayFormat>
        <label>DynamicTableFieldConfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Table Attribute Configurations</pluralLabel>
    <recordTypes>
        <fullName>ddt_dynamic_001__Column</fullName>
        <active>true</active>
        <description>This record type separates all the column related records</description>
        <label>Column</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddt_dynamic_001__Global_Action</fullName>
        <active>true</active>
        <description>This record type separates all the global actions applied to the particular table object</description>
        <label>Global Action</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ddt_dynamic_001__Prevent_Whitespace_in_Apiname</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(ddt_dynamic_001__Fields_API_Name__c, &apos; &apos;)</errorConditionFormula>
        <errorMessage>Field Api Name Does not contain blank space.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ddt_dynamic_001__Search_cant_be_applied_on_Long_Text_Area</fullName>
        <active>false</active>
        <description>Searching cannot be applied on long text area.</description>
        <errorConditionFormula>AND(ddt_dynamic_001__DynamicTableObjectConfiguration__r.ddt_dynamic_001__Search__c = TRUE,  ISPICKVAL( ddt_dynamic_001__Formatting__c, &quot;Long Text Area&quot;))</errorConditionFormula>
        <errorMessage>Search cannot be applied on Long text area.</errorMessage>
    </validationRules>
</CustomObject>